--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "face-api.js": "0.22.2",
     "ramda": "0.27.1",
     "react": "17.0.2",
+    "react-dnd": "14.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "11.3.2",
     "react-scripts": "4.0.3"
   },
   "scripts": {
@@ -37,7 +39,9 @@
   "devDependencies": {
     "@types/ramda": "0.27.40",
     "@types/react": "17.0.6",
+    "@types/react-dnd": "3.0.2",
     "@types/react-dom": "17.0.5",
+    "@types/react-dropzone": "5.1.0",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
     "eslint-config-prettier": "8.3.0",
@@ -46,7 +50,7 @@
     "eslint-plugin-node": "11",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-promise": "4",
-    "pre-commit": "^1.2.2",
+    "pre-commit": "1.2.2",
     "prettier": "2.3.0",
     "typescript": "4.2.4"
   }
