--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "stanley-ipkiss",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stakefish.github.io/stanley-ipkiss",
   "dependencies": {
+    "@types/react-dnd": "3.0.2",
+    "downloadjs": "1.4.7",
     "face-api.js": "0.22.2",
+    "html-to-image": "1.6.2",
     "ramda": "0.27.1",
     "react": "17.0.2",
     "react-dnd": "14.0.2",
+    "react-dnd-html5-backend": "14.0.0",
     "react-dom": "17.0.2",
+    "react-draggable": "4.4.3",
     "react-dropzone": "11.3.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "styled-components": "5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,11 +42,12 @@
     ]
   },
   "devDependencies": {
+    "@types/downloadjs": "1.4.2",
     "@types/ramda": "0.27.40",
     "@types/react": "17.0.6",
-    "@types/react-dnd": "3.0.2",
     "@types/react-dom": "17.0.5",
     "@types/react-dropzone": "5.1.0",
+    "@types/styled-components": "5.1.9",
     "@typescript-eslint/eslint-plugin": "4",
     "eslint": "7",
     "eslint-config-prettier": "8.3.0",
