--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,19 +31,31 @@ jobs:
         run: npm run lint
 
       - name: Build
-        if: github.ref == 'refs/heads/main'
         env:
           NODE_ENV: production
         run: npm run build
 
-      - name: Deploy
-        if: success() && github.ref == 'refs/heads/main'
+      - name: Deploy IPFS
+        uses: aquiladev/ipfs-action@v0.1.3
+        id: ipfs
+        with:
+          path: public
+
+      - name: Deploy GitHub Pages
+        if: success() && github.ref == 'refs/heads/master'
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: build
+          build_dir: public
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+      - name: Post hash
+        if: github.event_name == 'pull_request'
+        uses: thollander/actions-comment-pull-request@master
+        with:
+          message: "[IPFS](https://ipfs.io/ipfs/${{ steps.ipfs.outputs.hash }}) 🌎"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Contributors
         if: github.ref == 'refs/heads/main'
