--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,14 +39,14 @@ jobs:
         uses: aquiladev/ipfs-action@v0.1.3
         id: ipfs
         with:
-          path: public
+          path: build
 
       - name: Deploy GitHub Pages
         if: success() && github.ref == 'refs/heads/master'
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: public
+          build_dir: build
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
